# weather-forecast-ai

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/api/: batch_endpoints.py  endpoints.py  schemas.py  validators.py
src/cache/: redis_cache.py
src/config/: settings.py
src/data/: loader.py
src/models/: base.py  ensemble_precipitation.py  temperature_lstm.py
src/utils/: preprocessing.py  timezone.py
src/weather_forecast_ai/: __init__.py  main.py
tests/: conftest.py  test_ensemble_precipitation.py
